--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
         "psr-4": {
             "Melody\\": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
