--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
     "autoload": {
         "psr-4": {
             "Melody\\": "src/"
-        }
+        },
+
+        "files": [
+            "./helpers.php"
+        ]
     },
     "extra": {
         "branch-alias": {
